# jsonschema_cli2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
docker/: Dockerfile-dev
jsonschema_cli/: __main__.py  args.py  cli.py  exceptions.py  handlers.py  resolvers.py
jsonschema_cli/tests/: test_cli.py
jsonschema_cli2/: __main__.py  args.py  cli.py  handlers.py  load.py  resolvers.py
jsonschema_cli2/tests/: test_cli.py
schemas/: int.json  str.json  test.json
